# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

module_output_path = "udmf/udmf/ndkimpl"

###############################################################################
config("module_private_config") {
  include_dirs = [
    "${udmf_interfaces_path}/ndk/data",
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/convert",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_interfaces_path}/innerkits/dynamic",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/innerkitsimpl/client",
    "${udmf_framework_path}/innerkitsimpl/common",
    "${udmf_framework_path}/innerkitsimpl/convert",
    "${udmf_framework_path}/innerkitsimpl/data",
    "${udmf_framework_path}/innerkitsimpl/dynamic",
    "${udmf_framework_path}/innerkitsimpl/service",
    "${udmf_framework_path}/ndkimpl/data",
  ]
}

common_deps = [
  "${udmf_interfaces_path}/innerkits:udmf_core",
  "${udmf_interfaces_path}/innerkits:udmf_client",
  "${udmf_interfaces_path}/innerkits:utd_client",
  "${udmf_interfaces_path}/ndk:libudmf",
]

common_external_deps = [
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:dataobs_manager",
  "access_token:libaccesstoken_sdk",
  "access_token:libnativetoken",
  "access_token:libtoken_setproc",
  "app_file_service:fileuri_native",
  "bundle_framework:appexecfwk_base",
  "bundle_framework:appexecfwk_core",
  "cJSON:cjson",
  "c_utils:utils",
  "dfs_service:distributed_file_daemon_kit_inner",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "hitrace:hitrace_meter",
  "hitrace:libhitracechain",
  "image_framework:image",
  "image_framework:image_native",
  "image_framework:pixelmap",
  "init:libbegetutil",
  "ipc:ipc_single",
  "kv_store:distributeddata_inner",
  "kv_store:distributeddata_mgr",
  "libxml2:libxml2",
  "libuv:uv",
  "napi:ace_napi",
  "samgr:samgr_proxy",
]

udmf_test_impl_sources = [
  "${udmf_framework_path}/common/endian_converter.cpp",
  "${udmf_framework_path}/common/graph.cpp",
  "${udmf_framework_path}/common/tlv_object.cpp",
  "${udmf_framework_path}/common/tlv_util.cpp",
  "${udmf_framework_path}/common/udmf_copy_file.cpp",
  "${udmf_framework_path}/common/udmf_executor.cpp",
  "${udmf_framework_path}/common/udmf_radar_reporter.cpp",
  "${udmf_framework_path}/common/udmf_types_util.cpp",
  "${udmf_framework_path}/common/udmf_utils.cpp",
  "${udmf_framework_path}/innerkitsimpl/client/audit_helper.cpp",
  "${udmf_framework_path}/innerkitsimpl/client/getter_system.cpp",
  "${udmf_framework_path}/innerkitsimpl/client/udmf_async_client.cpp",
  "${udmf_framework_path}/innerkitsimpl/client/udmf_client.cpp",
  "${udmf_framework_path}/innerkitsimpl/common/progress_queue.cpp",
  "${udmf_framework_path}/innerkitsimpl/common/unified_key.cpp",
  "${udmf_framework_path}/innerkitsimpl/common/unified_meta.cpp",
  "${udmf_framework_path}/innerkitsimpl/common/uri_permission_util.cpp",
  "${udmf_framework_path}/innerkitsimpl/convert/data_params_conversion.cpp",
  "${udmf_framework_path}/innerkitsimpl/convert/ndk_data_conversion.cpp",
  "${udmf_framework_path}/innerkitsimpl/convert/udmf_conversion.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/application_defined_record.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/audio.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/file.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/folder.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/html.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/image.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/link.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/plain_text.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/system_defined_appitem.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/system_defined_form.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/system_defined_pixelmap.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/system_defined_record.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/text.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/unified_data.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/unified_data_helper.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/unified_html_record_process.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
  "${udmf_framework_path}/innerkitsimpl/data/video.cpp",
  "${udmf_framework_path}/innerkitsimpl/dynamic/pixelmap_loader.cpp",
  "${udmf_framework_path}/innerkitsimpl/dynamic/xml_loader.cpp",
  "${udmf_framework_path}/innerkitsimpl/service/progress_callback.cpp",
  "${udmf_framework_path}/innerkitsimpl/service/udmf_notifier_stub.cpp",
  "${udmf_framework_path}/innerkitsimpl/service/udmf_service_client.cpp",
  "${udmf_framework_path}/innerkitsimpl/service/udmf_service_proxy.cpp",
  "${udmf_framework_path}/ndkimpl/data/data_provider_impl.cpp",
  "${udmf_framework_path}/ndkimpl/data/udmf.cpp",
  "${udmf_framework_path}/ndkimpl/data/uds.cpp",
  "${udmf_framework_path}/ndkimpl/data/utd.cpp",
]

udmf_test_impl_deps = [ "${udmf_interfaces_path}/innerkits:utd_client" ]

ohos_unittest("UtdTest") {
  module_out_path = module_output_path

  sources = [ "utd_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  cflags = [ "-Werror=vla" ]
}

ohos_unittest("UdsTest") {
  module_out_path = module_output_path

  sources = [ "uds_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  cflags = [ "-Werror=vla" ]
}

ohos_unittest("UdmfTest") {
  module_out_path = module_output_path

  sources = udmf_test_impl_sources + [ "udmf_test.cpp" ]

  configs = [ ":module_private_config" ]

  use_exceptions = true

  deps = udmf_test_impl_deps

  external_deps = common_external_deps

  cflags = [ "-Werror=vla" ]
}

ohos_unittest("DataProviderImplTest") {
  module_out_path = module_output_path

  sources = [ "data_provider_impl_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = common_deps

  external_deps = common_external_deps

  defines = [
    "private=public",
    "protected=public",
  ]

  cflags = [ "-Werror=vla" ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [
    ":DataProviderImplTest",
    ":UdmfTest",
    ":UdsTest",
    ":UtdTest",
  ]
}
###############################################################################
