# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##############################hydra-fuzz########################################
import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

##############################fuzztest##########################################
ohos_fuzztest("UdmfServiceFuzzTest") {
  module_out_path = "udmf/service"

  include_dirs = [
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/manager",
    "${udmf_framework_path}/manager/store",
    "${udmf_framework_path}/manager/preprocess",
    "${udmf_framework_path}/manager/permission",
    "${udmf_framework_path}/manager/lifecycle",
    "${udmf_framework_path}/service",
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_service_path}/include",
    "${kv_store_path}/frameworks/common",
    "${ddms_path}/services/distributeddataservice/framework/include",
    "//third_party/libuv/include",
    "//third_party/node/src",
  ]

  fuzz_config_file = "${udmf_service_path}/test/fuzztest/udmfservice_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "udmfservice_fuzzer.cpp" ]

  deps = [ "${udmf_root_path}/service:udmf_server" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":UdmfServiceFuzzTest" ]
}
###############################################################################
