# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")

#####################hydra-fuzz###################
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

##############################fuzztest##########################################
ohos_fuzztest("TlvUtilFuzzTest") {
  module_out_path = "udmf/udmf"

  include_dirs = [
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/innerkits/service",
  ]

  fuzz_config_file =
      "${udmf_framework_path}/common/test/fuzztest/tlvutil_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "tlv_util_fuzzer.cpp",
    "${udmf_framework_path}/innerkitsimpl/data/unified_record.cpp",
    ]

  deps = [
    "${udmf_interfaces_path}/innerkits:udmf_client",
    "${udmf_interfaces_path}/innerkits:utd_client",
    "${udmf_interfaces_path}/ndk:libudmf"
  ]

  external_deps = [
    "ability_base:base",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "image_framework:image",
    "image_framework:image_native",
    "kv_store:distributeddata_inner",
    "samgr:samgr_proxy",
    "selinux_adapter:librestorecon",
  ]

  defines = [
    "private=public",
    "protected=public",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TlvUtilFuzzTest",
  ]
}
###############################################################################
