# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")

#####################hydra-fuzz###################
import("//build/test.gni")
import("//foundation/distributeddatamgr/udmf/udmf.gni")

##############################fuzztest##########################################
ohos_fuzztest("UdmfClientFuzzTest") {
  module_out_path = "udmf/udmf"

  include_dirs = [
    "${udmf_interfaces_path}/innerkits/client",
    "${udmf_interfaces_path}/innerkits/common",
    "${udmf_interfaces_path}/innerkits/data",
    "${udmf_framework_path}/common",
    "${udmf_framework_path}/innerkits/service",
  ]

  fuzz_config_file =
      "${udmf_framework_path}/innerkitsimpl/test/fuzztest/udmfclient_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "udmf_client_fuzzer.cpp" ]

  deps = [ "${udmf_interfaces_path}/innerkits:udmf_client" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":UdmfClientFuzzTest",
  ]
}
###############################################################################
